[package]
name = "portfolio"
version = "0.1.0"
authors = ["Kamil Koczurek <koczurekk@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
